# candle-sampling

./: .typos.toml  Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: docs.yml
candle_sampling/: all.html  index.html  sidebar-items.js
candle_sampling/logits_processor/: enum.SamplingMethod.html  index.html  sidebar-items.js  struct.LogitsProcessor.html  struct.Logprobs.html  struct.TopLogprob.html
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
src/: beam_search.rs  lib.rs  logits_processor.rs
src/candle_sampling/: lib.rs.html  logits_processor.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
