[package]
name = "candle-sampling"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { git = "https://github.com/EricLBuehler/candle.git", version = "0.4.0", branch = "noncontig_matmul" }
candle-nn = { git = "https://github.com/EricLBuehler/candle.git", version = "0.4.0", branch = "noncontig_matmul" }
candle-transformers = { git = "https://github.com/EricLBuehler/candle.git", version = "0.4.0", branch = "noncontig_matmul" }
rand = "0.8.5"
serde = "1.0.193"
tokenizers = "0.15.0"
